--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,6 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
-<%= link_to 'Sign In', new_user_session_path %>
-<%= link_to 'Sign Up', new_user_registration_path %>
-<%= link_to 'Sign Out', destroy_user_session_path %>
+<section class="my-5">
+  <div class="container">
+    <h1>Home</h1>
+    <p>Find me in app/views/home/index.html.erb</p>
+  </div>
+</section>
