--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,3 +15,4 @@
  */
 
 @import url('https://fonts.googleapis.com/css?family=Merriweather:400,700');
+@import "bootstrap/dist/css/bootstrap.min.css";
