--- a/app/views/layouts/shared/_navigation.html.slim
+++ b/app/views/layouts/shared/_navigation.html.slim
@@ -2,13 +2,16 @@ nav.navbar.navbar-dark.bg-dark.navbar-static-top.navbar-expand-md
   .container
     button.navbar-toggler.collapsed[type="button" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false"]
       span.sr-only Toggle navigation
-    = link_to "RailsProjectLvl2", root_path, class: 'navbar-brand'
+    = link_to root_path, class: 'navbar-brand' do
+      i.fas.fa-user-astronaut.fa-2x
     #bs-example-navbar-collapse-1.collapse.navbar-collapse
       ul.nav.navbar-nav.me-auto
         li.nav-item
           = link_to 'Posts', root_path, class: 'nav-link'
       ul.nav.navbar-nav.ms-auto
         - if user_signed_in?
+          li.nav-item
+            = link_to 'Create post', new_post_path, class: 'nav-link'
           li.nav-item
             = link_to 'Sign Out', destroy_user_session_path, method: :delete, class: 'nav-link'
         - else
