--- a/app/views/post_comments/_children.html.slim
+++ b/app/views/post_comments/_children.html.slim
@@ -1,15 +1,19 @@
 hr.my-2
   div[id="comment-#{comment.id}"]
     span.me-1= comment.user.email
-    span.text-muted 31 окт., 16:04
+    span.text-muted= distance_of_time_in_words(comment.created_at, Time.now)
     p= comment.content
   hr.my-2
   .mb-1
     a.d-block.small.text-muted.mb-1[data-bs-toggle="collapse" href="#new-post-comment-#{comment.id}"]
-      | Ответить
+      | Comment on
     .collapse[data-bs-target="#new-post-comment-#{comment.id}" id="new-post-comment-#{comment.id}"]
-      = render 'post_comments/form', post_comment: @post_comment, url: post_post_comments_path(@post), parent_id: comment.id
-    - if comment.has_children?
-      .ms-4
-        - comment.children.each do |children_comment|
-          = render 'post_comments/children', new_comment: @post_comment, comment: children_comment, url: post_post_comments_path(@post)
+      - if user_signed_in?
+        = render 'post_comments/form', post_comment: @post_comment, url: post_post_comments_path(@post), parent_id: comment.id
+        - if comment.has_children?
+          .ms-4
+            - comment.children.each do |children_comment|
+              = render 'post_comments/children', new_comment: @post_comment, comment: children_comment, url: post_post_comments_path(@post)
+      - else
+        | Requires&nbsp;
+        = link_to 'Sign In', new_user_session_path
