--- a/app/views/posts/_form.html.slim
+++ b/app/views/posts/_form.html.slim
@@ -4,5 +4,5 @@
   = f.association :post_category
 
   .mt-5
-    = link_to 'Cancel', posts_path, class: 'btn btn-danger me-1'
-    = f.submit 'Save', class: 'btn btn-success'
+    = link_to 'Cancel', posts_path, class: 'btn btn-secondary me-1'
+    = f.submit 'Save', class: 'btn btn-primary'
