--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -1,7 +1,7 @@
 nav[aria-label="breadcrumb"]
   ol.breadcrumb
     li.breadcrumb-item
-      = link_to 'Все статьи', root_path
+      = link_to 'All posts', root_path
     li.breadcrumb-item.active[aria-current="page"]= @post.post_category.name
 
 .mb-5
@@ -12,20 +12,12 @@ div= @post.body
 .d-flex.justify-content-between.mt-5
   div
     span.lead.me-2= @post.creator.email
-    span 4 дня
-  div
-    span.me-2= @post.post_likes.size
-    - @post_like = current_user.post_likes.find_by(post_id: @post.id)
-    - if @post_like
-      = link_to post_post_like_path(@post, @post_like), method: :delete do
-        i.fas.fa-thumbs-up
-    - else
-      = link_to post_post_likes_path(@post), method: :post do
-        i.far.fa-thumbs-up
-
+    span= distance_of_time_in_words(@post.created_at, Time.now)
+  = render 'posts/like_counter'
 hr
 
-= render 'post_comments/form', post_comment: @post_comment, url: post_post_comments_path(@post), parent_id: nil
+- if user_signed_in?
+  = render 'post_comments/form', post_comment: @post_comment, url: post_post_comments_path(@post), parent_id: nil
 
 .row.gap-3.mt-5
   - @post.post_comments.roots.each do |post_comment|
@@ -43,6 +35,10 @@ hr
       hr.my-0
       .m-3
         a.d-block.small.text-muted.mb-1[data-bs-toggle="collapse" href="#new-post-comment-#{post_comment.id}"]
-          | Ответить
+          | Comment on
         .collapse[data-bs-target="#new-post-comment-#{post_comment.id}" id="new-post-comment-#{post_comment.id}"]
-          = render 'post_comments/form', post_comment: @post_comment, url: post_post_comments_path(@post), parent_id: post_comment.id
+          - if user_signed_in?
+            = render 'post_comments/form', post_comment: @post_comment, url: post_post_comments_path(@post), parent_id: post_comment.id
+          - else
+            | Requires&nbsp;
+            = link_to 'Sign In', new_user_session_path
