--- a/app/views/post_comments/_children.html.slim
+++ b/app/views/post_comments/_children.html.slim
@@ -10,10 +10,10 @@ hr.my-2
     .collapse[data-bs-target="#new-post-comment-#{comment.id}" id="new-post-comment-#{comment.id}"]
       - if user_signed_in?
         = render 'post_comments/form', post_comment: @post_comment, url: post_post_comments_path(@post), parent_id: comment.id
-        - if comment.has_children?
-          .ms-4
-            - comment.children.each do |children_comment|
-              = render 'post_comments/children', new_comment: @post_comment, comment: children_comment, url: post_post_comments_path(@post)
       - else
         | Requires&nbsp;
         = link_to 'Sign In', new_user_session_path
+    - if user_signed_in? && comment.has_children?
+      .ms-4
+        - comment.children.each do |children_comment|
+          = render 'post_comments/children', new_comment: @post_comment, comment: children_comment, url: post_post_comments_path(@post)
