--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -20,7 +20,7 @@ hr
   = render 'post_comments/form', post_comment: @post_comment, url: post_comments_path(@post), parent_id: nil
 
 .row.gap-3.mt-5
-  - @post.post_comments.roots.each do |post_comment|
+  - @post.comments.roots.each do |post_comment|
     .col-12: .card
       .card-header= post_comment.user.email
       .card-body
