step 7 completed: code refactoring by namespace way

--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -2,7 +2,7 @@ nav[aria-label="breadcrumb"]
   ol.breadcrumb
     li.breadcrumb-item
       = link_to 'All posts', root_path
-    li.breadcrumb-item.active[aria-current="page"]= @post.post_category.name
+    li.breadcrumb-item.active[aria-current="page"]= @post.category.name
 
 .mb-5
   h1.mb-2= @post.title
