--- a/app/views/posts/_form.html.slim
+++ b/app/views/posts/_form.html.slim
@@ -1,7 +1,7 @@
 = simple_form_for post do |f|
   = f.input :title, wrapper_html: { class: 'mb-3' }
   = f.input :body, as: :text, wrapper_html: { class: 'mb-3' }
-  = f.association :post_category
+  = f.association :category
 
   .mt-5
     = link_to 'Cancel', posts_path, class: 'btn btn-secondary me-1'
