--- a/app/views/posts/_like_counter.html.slim
+++ b/app/views/posts/_like_counter.html.slim
@@ -4,7 +4,7 @@
   - if user_signed_in?
     - @post_like = current_user.post_likes.find_by(post_id: @post.id)
     - if @post_like
-      = link_to like_path(@post_like), method: :delete, class: 'link-secondary' do
+      = link_to post_like_path(@post, @post_like), method: :delete, class: 'link-secondary' do
         i.fas.fa-thumbs-up
     - else
       = link_to post_likes_path(@post), method: :post, class: 'link-secondary' do
