--- a/app/views/post_comments/_form.html.slim
+++ b/app/views/post_comments/_form.html.slim
@@ -1,6 +1,6 @@
 = simple_form_for post_comment, local: true, url: url, parent_id: nil do |f|
-  = f.input :content, as: :text, label: 'Comment', wrapper_html: { class: 'mb-3' }
+  = f.input :content, as: :text, label: t('post_comments.label'), wrapper_html: { class: 'mb-3' }
   = f.hidden_field :parent_id, { value: parent_id }
 
   .mt-2
-    = f.submit 'Create comment', class: 'btn btn-primary btn-sm'
+    = f.submit t('post_comments.actions.create'), class: 'btn btn-primary btn-sm'
